fix header transitioning on safari

--- a/src/ui/Header/index.scss
+++ b/src/ui/Header/index.scss
@@ -42,6 +42,14 @@ $font-size-quiz: 20px;
 }
 
 @keyframes transitioning-from-home {
+  // Need something in here in order for Safari to get onAnimationEnd.
+  // Make it be a transition from something to same value, we just need something.
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes sliding-site-name-left {
@@ -66,12 +74,36 @@ $font-size-quiz: 20px;
 }
 
 @keyframes transitioning-to-quiz {
+  // Need something in here in order for Safari to get onAnimationEnd.
+  // Make it be a transition from something to same value, we just need something.
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes transitioning-from-quiz {
+  // Need something in here in order for Safari to get onAnimationEnd.
+  // Make it be a transition from something to same value, we just need something.
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes transitioning-to-home {
+  // Need something in here in order for Safari to get onAnimationEnd.
+  // Make it be a transition from something to same value, we just need something.
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 // CSS
